# local-secret-leak-preflight

./: .gitignore  .pre-commit-hooks.yaml  .secret-preflight-ignore  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
src/secret_preflight/: __init__.py  cli.py  scanner.py
tests/: test_cli.py  test_scanner.py
