[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "local-secret-leak-preflight"
version = "0.1.11"
description = "A tiny pre-commit and CLI scanner for staged secret leaks."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Local Secret Leak Preflight contributors" }
]
keywords = ["git", "pre-commit", "secrets", "security", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Security",
  "Topic :: Software Development :: Version Control :: Git",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
secret-preflight = "secret_preflight.cli:main"

[project.urls]
Homepage = "https://github.com/Singularity777x/local-secret-leak-preflight"
Repository = "https://github.com/Singularity777x/local-secret-leak-preflight"
Issues = "https://github.com/Singularity777x/local-secret-leak-preflight/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/secret_preflight"]
